// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio> should render as a radio button: type=radio, value=foo, no name 1`] = `
<DocumentFragment>
  <input
    name=""
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="foo"
  />
</DocumentFragment>
`;

exports[`<RadioGroup> should render radio input names: name=me value=a, name=me value=b 1`] = `
<DocumentFragment>
  <input
    name="me"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  <input
    name="me"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="b"
  />
</DocumentFragment>
`;
